--- a/FindMP/MPLetter.html
+++ b/FindMP/MPLetter.html
@@ -300,25 +300,28 @@
     </style>
 </head>
 <body class="c4">
-<p class="c0"><span>Dear {mpname},</span></p>
-<p class="c0 c2"><span></span></p>
-<p class="c0"><span>I am from {country} and I have lived in the UK for {years} years. I am currently one of your constituents. </span></p>
-<p class="c0 c2"><span></span></p>
-<p class="c0"><span>Britain&rsquo;s decision to leave the European Union, and the subsequent failure of politicians in the country to articulate what this means for people like me who have made Britain their home, have left me with strong feelings of uncertainty. </span></p>
-<p class="c0 c2"><span></span></p>
-<p class="c0"><span>As your constituent, I would like to know how you plan to address the situation of European Union citizens living in Britain, in particular:<br></span></p>
-<ul class="c1 lst-kix_9jhhg83rtx97-0 start">
-    <li class="c0 c3"><span>What will you do to combat the increasing number of hate crimes directed against immigrant communities following the referendum?</span></li>
-</ul>
-<p class="c0 c2"><span></span></p><ul class="c1 lst-kix_9jhhg83rtx97-0">
-    <li class="c0 c3"><span>If the courts determine that it is up to Parliament to invoke Article 50, how will you vote?</span></li>
-</ul>
-<p class="c0 c2"><span></span></p><ul class="c1 lst-kix_9jhhg83rtx97-0">
-    <li class="c0 c3"><span>In the event that Britain leaves the single market, do you support granting an unconditional, indefinite leave to remain to immigrants from European Union countries who currently live and work in Britain, as proposed by the Liberal Democrats?</span></li>
-</ul>
-<p class="c0 c2"><span></span></p><ul class="c1 lst-kix_1p5s2m6xjtma-0 start"><li class="c0 c3"><span>Do you support policies requiring immigrants to make a minimum annual wage before they are allowed to stay in Britain?</span></li>
-</ul>
-<p class="c0 c2"><span></span></p>
-    <p class="c0"><span>Thank you in advance for considering these questions, and I look forward to hearing back from you. <br><br>Yours sincerely,<br><br>{name}</span></p>
+    <div>
+        <p class="c0"><span>Dear {mpname},</span></p>
+        <p class="c0 c2"><span></span></p>
+        <p class="c0"><span>I am from {country} and I have lived in the UK for {years} years. I am currently one of your constituents. </span></p>
+        <p class="c0 c2"><span></span></p>
+        <p class="c0"><span>Britain&rsquo;s decision to leave the European Union, and the subsequent failure of politicians in the country to articulate what this means for people like me who have made Britain their home, have left me with strong feelings of uncertainty. </span></p>
+        <p class="c0 c2"><span></span></p>
+        <p class="c0"><span>As your constituent, I would like to know how you plan to address the situation of European Union citizens living in Britain, in particular:<br></span></p>
+        <ul class="c1 lst-kix_9jhhg83rtx97-0 start">
+            <li class="c0 c3"><span>What will you do to combat the increasing number of hate crimes directed against immigrant communities following the referendum?</span></li>
+        </ul>
+        <p class="c0 c2"><span></span></p><ul class="c1 lst-kix_9jhhg83rtx97-0">
+            <li class="c0 c3"><span>If the courts determine that it is up to Parliament to invoke Article 50, how will you vote?</span></li>
+        </ul>
+        <p class="c0 c2"><span></span></p><ul class="c1 lst-kix_9jhhg83rtx97-0">
+            <li class="c0 c3"><span>In the event that Britain leaves the single market, do you support granting an unconditional, indefinite leave to remain to immigrants from European Union countries who currently live and work in Britain, as proposed by the Liberal Democrats?</span></li>
+        </ul>
+        <p class="c0 c2"><span></span></p><ul class="c1 lst-kix_1p5s2m6xjtma-0 start">
+            <li class="c0 c3"><span>Do you support policies requiring immigrants to make a minimum annual wage before they are allowed to stay in Britain?</span></li>
+        </ul>
+        <p class="c0 c2"><span></span></p>
+        <p class="c0"><span>Thank you in advance for considering these questions, and I look forward to hearing back from you. <br><br>Yours sincerely,<br><br>{name}</span></p>
+    </div>
 </body>
 </html>
