--- a/FindMP/MPLetter.html
+++ b/FindMP/MPLetter.html
@@ -305,7 +305,7 @@
         <p class="c0 c2"><span></span></p>
         <p class="c0"><span>I am from {country} and I have lived in the UK for {years} years. I am currently one of your constituents. </span></p>
         <p class="c0 c2"><span></span></p>
-        <p class="c0"><span>Britain&rsquo;s decision to leave the European Union, and the subsequent failure of politicians in the country to articulate what this means for people like me who have made Britain their home, have left me with strong feelings of uncertainty. </span></p>
+        <p class="c0"><span>Britain&rsquo;s decision to leave the European Union has caused me a great amount of uncertainty. So has the failure of politicians in the UK to articulate what the consequences of Brexit are for immigrants like me, who have made Britain their home. </span></p>
         <p class="c0 c2"><span></span></p>
         <p class="c0"><span>As your constituent, I would like to know how you plan to address the situation of European Union citizens living in Britain, in particular:<br></span></p>
         <ul class="c1 lst-kix_9jhhg83rtx97-0 start">
